# scutemob

./: .gitignore  CLAUDE.md  Cargo.toml  rust-toolchain.toml
crates/card-defs/: Cargo.toml  build.rs
crates/card-defs/src/: lib.rs
crates/card-defs/src/defs/: abjure.rs  abomination_of_llanowar.rs  abrade.rs  abrupt_decay.rs  abstergo_entertainment.rs  abundance.rs  abzan_charm.rs  academy_manufactor.rs  access_denied.rs  access_tunnel.rs  accorders_shield.rs  accursed_marauder.rs  acererak_the_archlich.rs  acidic_slime.rs  adeline_resplendent_cathar.rs  adriana_captain_of_the_guard.rs  adrix_and_nev_twincasters.rs  aesi_tyrant_of_gyre_strait.rs  aetherflux_reservoir.rs  aetherize.rs  agadeems_awakening.rs  agent_venom.rs  aggravated_assault.rs  ainok_bond_kin.rs  ainok_strike_leader.rs  ajani_sleeper_agent.rs  akrasan_squire.rs  akroma_angel_of_fury.rs  akromas_will.rs  al_bhed_salvagers.rs  alandra_sky_dreamer.rs  alela_cunning_conqueror.rs  alesha_who_laughs_at_fate.rs  alexios_deimos_of_kosmos.rs  allied_strategies.rs  allosaurus_shepherd.rs  alseid_of_lifes_bounty.rs  altar_of_bone.rs  altar_of_dementia.rs  an_offer_you_cant_refuse.rs  (+1763 more)
crates/engine/: Cargo.toml  build.rs
crates/engine/benches/: engine_perf.rs
crates/engine/src/: lib.rs
crates/engine/src/cards/: card_definition.rs  definitions.rs  helpers.rs  mod.rs  registry.rs
crates/engine/src/effects/: mod.rs
crates/engine/src/rules/: abilities.rs  casting.rs  combat.rs  command.rs  commander.rs  copy.rs  engine.rs  events.rs  face.rs  foretell.rs  lands.rs  layers.rs  loop_detection.rs  mana.rs  miracle.rs  mod.rs  plot.rs  priority.rs  protection.rs  protocol.rs  replacement.rs  resolution.rs  sba.rs  suspend.rs  turn_actions.rs  turn_structure.rs
crates/engine/src/state/: ability_definition_registry.rs  builder.rs  combat.rs  continuous_effect.rs  diagnostics.rs  dungeon.rs  error.rs  game_object.rs  hash.rs  keyword_registry.rs  mod.rs  player.rs  replacement_effect.rs  stack.rs  stubs.rs  targeting.rs  test_util.rs  turn.rs  types.rs  zone.rs
crates/engine/src/testing/: mod.rs  replay_harness.rs  script_schema.rs
crates/engine/tests/: abilities.rs  activation_condition.rs  adapt.rs  additional_combat.rs  adventure_tests.rs  affinity.rs  afflict.rs  afterlife.rs  aftermath.rs  alliance.rs  amass.rs  amplify.rs  animated_creature_sacrifice_cost.rs  annihilator.rs  armorcraft_judge_etb.rs  ascend.rs  assist.rs  backup.rs  bargain.rs  battle_cry.rs  bestow.rs  blitz.rs  blood_tokens.rs  bloodrush.rs  bloodthirst.rs  bolster.rs  builder_tests.rs  bushido.rs  buyback.rs  card_def_fixes.rs  card_registry_gate.rs  cascade.rs  casting.rs  casualty.rs  cda_tests.rs  champion.rs  changeling.rs  channel.rs  chosen_creature_type.rs  cipher.rs  (+262 more)
crates/engine/tests/casting/: animated_creature_sacrifice_cost.rs  casting.rs  cost_primitives.rs  main.rs  mana_and_lands.rs  mana_costs.rs  mana_filter.rs  mana_pool.rs  mana_restriction.rs  optional_cost_and_counter_tax.rs  spell_cost_modification.rs  x_cost_spells.rs
crates/engine/tests/combat/: additional_combat.rs  combat.rs  combat_harness.rs  fight_bite.rs  main.rs  tapped_and_attacking.rs
crates/engine/tests/core/: ability_definition_registry.rs  authoring_report.rs  bare_lookup_ratchet.rs  card_def_fixes.rs  card_defs_fmt.rs  card_registry_gate.rs  completeness_deviation_scan.rs  concede.rs  corner_case_gaps.rs  deck_validation.rs  effect_choose_gate.rs  emblem_tests.rs  hash_schema.rs  invariants.rs  keyword_registry.rs  lki_diagnostics_scan.rs  main.rs  pb_rs1_roster_sweep.rs  pb_rs2_hybrid_phyrexian_activation_roster.rs  pb_rs3_combat_trigger_roster.rs  pending_trigger_shape.rs  priority.rs  protocol_roundtrip.rs  protocol_schema.rs  resolution.rs  sba.rs  six_player.rs  snapshot_perf.rs  state_foundation.rs  state_invariants.rs  turn_invariants.rs  zone_integrity.rs
crates/engine/tests/mechanics_a_d/: adapt.rs  adventure_tests.rs  affinity.rs  afflict.rs  aftermath.rs  alliance.rs  amplify.rs  ascend.rs  assist.rs  backup.rs  bargain.rs  battle_cry.rs  bestow.rs  blitz.rs  blood_tokens.rs  bloodrush.rs  bloodthirst.rs  buyback.rs  cascade.rs  casualty.rs  champion.rs  changeling.rs  channel.rs  chosen_creature_type.rs  cipher.rs  cleave.rs  clue_tokens.rs  coin_flip_dice.rs  collect_evidence.rs  connive.rs  convoke.rs  corrupted.rs  count_based_scaling.rs  craft.rs  crew.rs  cumulative_upkeep.rs  dash.rs  delve.rs  destroy_and_reanimate.rs  devoid.rs  (+9 more)
crates/engine/tests/mechanics_e_l/: echo.rs  effect_sacrifice_permanents_filter.rs  emerge.rs  enchant.rs  encore.rs  enlist.rs  enrage.rs  entwine.rs  equip.rs  escalate.rs  escape.rs  eternalize.rs  evoke.rs  evolve.rs  exalted.rs  exploit.rs  extort.rs  extra_turns.rs  fabricate.rs  fading.rs  flashback.rs  food_tokens.rs  forage.rs  forecast.rs  foretell.rs  fortify.rs  fuse.rs  gift.rs  golgari_grave_troll.rs  graft.rs  gravestorm.rs  graveyard_abilities.rs  graveyard_targeting.rs  hideaway.rs  horsemanship.rs  impending.rs  improvise.rs  investigate.rs  jump_start.rs  keywords.rs  (+5 more)
crates/engine/tests/mechanics_m_z/: library_ordering.rs  madness.rs  main.rs  mass_destroy.rs  mass_reanimate.rs  meld.rs  modular.rs  morph.rs  mutate.rs  mutate_data_model.rs  myriad.rs  ninjutsu.rs  offspring.rs  outlast.rs  overload.rs  pain_lands.rs  pb_ef5_transform_self.rs  pb_os4_return_transformed.rs  pb_os4b_face_aware_abilities.rs  (+35 more)
crates/simulator/: Cargo.toml
crates/simulator/src/: bot.rs  deck.rs  driver.rs  heuristic_bot.rs  invariants.rs  legal_actions.rs  lib.rs  mana_solver.rs  random_bot.rs  report.rs
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tools/mcp-server/: Cargo.toml  run.sh
tools/mcp-server/src/: main.rs  rules_db.rs
tools/replay-viewer/: Cargo.toml
tools/replay-viewer/frontend/: package-lock.json  vite.config.js
tools/replay-viewer/src/: api.rs  main.rs  replay.rs  view_model.rs
tools/scryfall-import/: Cargo.toml
tools/scryfall-import/src/: main.rs
tools/tui/: Cargo.toml
tools/tui/src/: event.rs  main.rs  theme.rs
(+3075 files in other folders)
