[workspace]
resolver = "2"
members = [
    "crates/card-types",
    "crates/card-defs",
    "crates/engine",
    "crates/network",
    "crates/card-db",
    "crates/card-pipeline",
    "crates/simulator",
    "tools/scryfall-import",
    "tools/mcp-server",
    "tools/replay-viewer",
    "tools/tui",
]

[workspace.package]
edition = "2021"
license = "MIT"

# Lint policy, source-encoded rather than CI-flag-only (SR-10).
# Mirrors CI's `cargo clippy --all-targets -- -D warnings`: the `warnings`
# group promotes every warn-level rustc *and* clippy diagnostic to an error,
# so a plain `cargo build`/`cargo clippy` now enforces the same bar without the
# extra flag. Each workspace member opts in with `[lints] workspace = true`.
# (Toolchain float — new lints in a newer stable reddening with no code change —
# is handled separately by pinning the toolchain in SR-11 / scutemob-63.)
[workspace.lints.rust]
warnings = "deny"

# SR-32: assert-visible fuzzing profile.
#
# The fuzzer (`crates/simulator/src/bin/fuzzer.rs`) runs thousands of automated
# games looking for engine anomalies, and wants release-level speed. But the
# SR-4 / SR-14 tripwires that flag IMPOSSIBLE-class state absences (CR 400.7
# last-known-information bugs, missing PlayerIds/zones, etc.) are `debug_assert!`s
# in `state::diagnostics` — compiled out under `--release`, which is exactly the
# profile a fuzz run uses. So the one build that hammers the engine hardest is
# also the one build that is blind to those tripwires.
#
# This profile keeps release optimisation but turns the assertions back on, so a
# fuzz run actually trips them. Invoke it with:
#
#   cargo run --profile fuzz --bin mtg-fuzzer -- --games 10000 --stop-on-error
#
# (A plain `cargo run --release --bin mtg-fuzzer` still exists for raw throughput
# once a run is known clean.)
[profile.fuzz]
inherits = "release"
debug-assertions = true
overflow-checks = true
