[package]
name = "mtg-engine"
version = "0.1.0"
edition.workspace = true

[dependencies]
blake3 = "1"
im = { version = "15", features = ["serde"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "engine_perf"
harness = false
