[package]
name = "mtg-engine"
version = "0.1.0"
edition.workspace = true

[features]
test-util = []

[dependencies]
bitflags = { version = "2", features = ["serde"] }
blake3 = "1"
im = { version = "15", features = ["serde"] }
mtg-card-defs = { path = "../card-defs" }
mtg-card-types = { path = "../card-types" }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
mtg-engine = { path = ".", features = ["test-util"] }
# Used by tests/protocol_schema.rs to digest the Command/GameEvent type closure.
blake3 = "1"
criterion = { version = "0.5", features = ["html_reports"] }
im = { version = "15", features = ["serde"] }
proptest = "1"

[[bench]]
name = "engine_perf"
harness = false

[lints]
workspace = true
