[package]
name = "mtg-engine-app"
version = "0.1.0"
description = "MTG Commander Rules Engine — Desktop Client"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
