[package]
name = "mtg-mcp-server"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "mtg-mcp-server"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.5", features = ["server", "transport-io", "macros"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
