[package]
name = "replay-viewer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "replay-viewer"
path = "src/main.rs"

[dependencies]
mtg-engine = { path = "../../crates/engine" }
axum = "0.7"
tower-http = { version = "0.6", features = ["fs"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
