[package]
name = "scryfall-import"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "scryfall-import"
path = "src/main.rs"

[dependencies]
mtg-card-db = { path = "../../crates/card-db" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
ureq = "3"
