[package]
name = "mtg-tui"
version = "0.1.0"
edition.workspace = true
description = "TUI tools for the MTG Commander Rules Engine"

[[bin]]
name = "mtg-tui"
path = "src/main.rs"

[dependencies]
# Core TUI
ratatui = "0.30"
crossterm = "0.28"
tui-markdown = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"

# Serialization (for hook state file)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
